<resources>

    <!-- Name of the different activities and general actions -->
    <string name="app_name">Care4old</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_psychological_test">PsychologicalTest</string>
    <string name="title_activity_hospitalisation">Hospitalisation</string>
    <string name="title_activity_medication__drugs">Medication_Drugs</string>
    <string name="title_activity_professionnal_account">ProfessionnalAccount</string>
    <string name="title_activity_main_page_pro">MainPagePro</string>
    <string name="title_activity_kinesitherapeutical_report">KinesitherapeuticalReport</string>

<!-- Psychological Test string ressources -->

    <string name="minibesttitle">Mini-best test</string>
    <string name="ajustementpostural">Ajustement Postural /8</string>
    <string name="reponseposturale">Réponse Posturale /8</string>
    <string name="sensororientation">Orientation Sensorielle /6</string>
    <string name="marchstab">Stabilité à la marche /10</string>
    <string name="totalminibest">Total /32</string>
    <string name="testgreco">Mini-Mental State version Greco</string>
    <string name="grecoscore">Score Global</string>
    <string name="listemots">Liste de mots utilisés:</string>
    <string name="rappelimmediat">Score Rappel Immediat</string>
    <string name="rappeldiffere">Score Rappel Différé 1–3</string>
    <string name="minigds">Mini GDS</string>
    <string name="question1">Vous sentez-vous découragé et triste ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="question2">Etes-vous heureux la plupart du temps ?</string>
    <string name="question3">Avez vous le sentiment que votre vie est vide ?</string>
    <string name="question4">Avez-vous l\'impression que votre vie est désespérée ?</string>

<!-- Kinesitherapeutical Test string ressources -->

    <string name="tinettipoma">Tinetti-Poma</string>
    <string name="equilibre">Equilibre</string>
    <string name="equilibresynamique">Equilibre Dynamique(marche)</string>
    <string name="totaltinettipoma">Total Tinetti Poma</string>
    <string name="getupandgo">Get Up and Go</string>
    <string name="temps">Temps (sec)</string>
    <string name="vitessemarche">Vitesse Marche (sur 4m)</string>
    <string name="lent">Lente (sec)</string>
    <string name="rapide">Rapide (sec)</string>

    <!-- Array of values for the different spinners -->
   <!--  <string name="Notes"> Note à attribuer</string> -->

    <string-array name="Notes_8">
        <!-- <item>Note à attribuer</item> -->
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="Notes_6">
        <!-- <item>Note à attribuer</item> -->
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="Notes_10">
       <!-- <item>Note à attribuer</item> -->
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="Notes_12">
        <!-- <item>Note à attribuer</item> -->
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="Notes_16">
        <!-- <item>Note à attribuer</item> -->
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>


    <string-array name="Word_List">
        <item>mot1</item>
    </string-array>
    <string name="title_activity_medical_check">MedicalCheck</string>
    <string name="noGIR">Pas de GIR</string>
    <string name="gir1">GIR - 1</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_patient_page">PatientPage</string>
    <string name="title_activity_patient_page_perso">PatientPagePerso</string>
    <string name="save">Sauv.</string>
    <string name="reset">Reset</string>
    <string name="cancel">Annuler</string>
    <string name="search">Search</string>
    <string name="search_hint">Search my app</string>
    <string name="testChoice">Choix du test à effectuer:</string>
    <string name="med_check_button">Visit. Medicale</string>
    <string name="med_check_text">Visite Médicale</string>
    <string name="kine_test_button">Seanc. Kiné.</string>
    <string name="kine_test_text">Seance Kinésithérapeutique</string>
    <string name="psy_test_button">Seanc. Psy.</string>
    <string name="psy_test_text">Seance Psychologique</string>
    <string name="hospitalisation_button">Hospitalisation</string>
    <string name="hospitalisation_text">Hospitalisation</string>
    <string name="patient_info">Informations sur le patient:</string>
    <string name="back">Retour</string>
    <string name="quit">Quitter</string>
    <string name="done">Done</string>
    <string name="title_activity_menu_patient">MenuPatient</string>
    <string name="title_activity_physician_page">PhysicianPage</string>
    <string name="title_activity_registration">RegistrationActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>
