<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_patient_page"
    tools:context="com.example.tinyl.care4old.PatientPage">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableRow>

            <TextView

                android:id="@+id/welcomeText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Bienvenue,"
                android:textStyle="bold"
                android:textColor="#000000"
                android:gravity="center"/>

            <TextView

                android:id="@+id/idUser"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="xxxxxx"
                android:textStyle="bold"
                android:textColor="#000000"
                android:gravity="end"/>
        </TableRow>
        <TextView

            android:id="@+id/idPatient"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Nom Patient, Prenom Patient"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="start"/>

        <TextView
            android:id="@+id/testChoice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/testChoice"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="start"/>

        <TableRow>
            <Button

                android:id="@+id/mediCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openMCheck"
                android:text="@string/med_check_button"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/mediCheckText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/med_check_text"
                android:textStyle="bold"
                android:textColor="#000000"
                android:gravity="start"/>

        </TableRow>

        <TableRow>
            <Button

                android:id="@+id/kineTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openKineTest"
                android:text="@string/kine_test_button"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/kineTestText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/kine_test_text"
                android:textStyle="bold"
                android:textColor="#000000"
                android:gravity="start"/>

        </TableRow>

        <TableRow>
            <Button

                android:id="@+id/psyTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openPsyTest"
                android:text="@string/psy_test_button"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/psyTestText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/psy_test_text"
                android:textStyle="bold"
                android:textColor="#000000"
                android:gravity="start"/>

        </TableRow>

        <TableRow>
            <Button

                android:id="@+id/hospitalisation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openHospitalisation"
                android:text="@string/hospitalisation_button"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/hospitalisationText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hospitalisation_text"
                android:textStyle="bold"
                android:textColor="#000000"
                android:gravity="start"/>

        </TableRow>

    </TableLayout>
</ScrollView>
